--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -6,4 +6,5 @@ html( lang="en" )
     link( rel="stylesheet" href="/common.sss" )
     link( rel="stylesheet" href="/docs.sss" )
   body
+    include header/header.pug
     h1 Title 1
