--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -3,8 +3,7 @@ html( lang="en" )
   head
     meta( charset="utf-8" )
     title Logux.io UI Kik
-    script( async src="/common.js" )
-    link( rel="stylesheet" href="/common.sss" )
+    include head.pug
   body
     include header/header.pug
     h1 Title 1
