--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -2,8 +2,49 @@ doctype html
 html( lang="en" )
   head
     meta( charset="utf-8" )
-    title Logux.io UI Kik
+    title Logux.io UI Kit
     include head.pug
   body
     include header/header.pug
-    h1 Title 1
+    article.text
+      h1 Logux.io UI Kit
+      p Logux <strong>actions</strong> are very similar to <a href="#">Redux actions</a>. JSON objects describe what was changed in <a href="#">the application state</a>. Logux Core provides <code>BaseNode</code> class, which will synchronize actions between two nodes. <code>ClientNode</code> and <code>ServerNode</code> classes extend this class with small behaviour changes.
+      ol
+        li
+          p They must have type property with a string value.
+        li
+          p You can use only string, number, boolean, null, array, and object as values.
+      p
+      ul
+        li
+          p The <code>standard Redux</code> way to dispatch actions. Action will not be sent to the server or another browser tab. There is no way to set action’s meta in this method.
+          pre store.dispatch(action)
+        li
+          p <code>preadd</code>: action is going to be added to the log. It is the only way to set <a href="#"><code>meta.reasons</code></a>. This event will not be called for cross-tab actions added in a different browser tab.
+      h2 Subtitle
+      p By default, the server state is opposite to client state. Because server-side cache could be very big, the database is the single source of truth. You can use any database with Logux.
+      p Logux Server removes action after processing and always look to a database for the latest value. As a result, you can’t undo actions on the server.
+      pre const action = { type: 'user/add' }
+      p However, you can change this behavior and have event sourcing on the server too.
+      h2 <code>add()</code>
+      h3 Parameters
+      table
+        tr
+          th Name
+          th Type
+          th Description
+        tr
+          td <code>nodeId</code>
+          td <code><a href="#">string</a></code>
+          td Unique current machine name.
+        tr
+          td <code>reason</code>
+          td <code><a href="#">string</a> = 'error'</code>
+          td Optional code for reason.
+        tr
+          td <code>options</code>
+          td <code><a href="#">object</a>?</code>
+          td Synchronization options.
+      h3 Returns
+      p <code><a href="#">Promise</a>&lt;<a href="#">boolean</a>></code>
+      a.button( href="#" ) Next chapter →
