Add links to header

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -5,6 +5,7 @@ html( lang="en" )
     title Logux.io UI Kit
     include head.pug
   body
+    - var category = 'guide'
     include header/header.pug
     article.text
       h1 Logux.io UI Kit
