--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -22,7 +22,7 @@ html( lang="en" )
           p The <code class="text_code">standard Redux</code> way to dispatch actions. Action will not be sent to the server or another browser tab. There is no way to set action’s meta in this method.
           pre store.dispatch(action)
         li
-          p <code class="text_code">preadd</code>: action is going to be added to the log. It is the only way to set <a href="#"><code class="text_code">meta.reasons</code></a>. This event will not be called for cross-tab actions added in a different browser tab.
+          p <code class="text_code">preadd</code>: action is going to be added to the log. It is the only way to set <a href="#" class="text_code-link"><code class="text_code">meta.reasons</code></a>. This event will not be called for cross-tab actions added in a different browser tab.
       h2.text_subtitle Subtitle
       p.text_block By default, the server state is opposite to client state. Because server-side cache could be very big, the database is the single source of truth. You can use any database with Logux.
       p.text_block Logux Server removes action after processing and always look to a database for the latest value. As a result, you can’t undo actions on the server.
