Fix link styles

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -48,5 +48,5 @@ html( lang="en" )
           td <code><a href="#">object</a>?</code>
           td Synchronization options.
       h3.text_subsubtitle Returns
-      p.text_block <code class="text_code"><a href="#">Promise</a>&lt;<a href="#">boolean</a>></code>
+      p.text_block <code><a href="#">Promise</a>&lt;<a href="#">boolean</a>></code>
       a.button( href="#" ) Next chapter →
