--- a/src/head.pug
+++ b/src/head.pug
@@ -8,3 +8,5 @@ meta( name="apple-mobile-web-app-title" content="Logux" )
 
 script( async src="/common.js" )
 link( rel="stylesheet" href="/common.sss" )
+
+meta( property="og:image" content="/base/og.png" )
