--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -9,7 +9,7 @@ html( lang="en" )
     include header/header.pug
     script( async src="/uikit.js" )
     article.text
-      h1.text_title Logux.io UI Kit
+      h1.title Logux.io UI Kit
       p.text_block Theme switcher: <a href="#">auto</a>, <a href="#dark">dark</a>, <a href="#light">light</a>.
       p.text_block Logux <strong>actions</strong> are very similar to <a href="#">Redux actions</a>. JSON objects describe what was changed in <a href="#">the application state</a>. Logux Core provides <code class="code">BaseNode</code> class, which will synchronize actions between two nodes. <code class="code">ClientNode</code> and <code class="code">ServerNode</code> classes extend this class with small behaviour changes.
       ol.list
@@ -23,13 +23,13 @@ html( lang="en" )
           pre.code-block store.dispatch(action)
         li
           p.text_block <code class="code">preadd</code>: action is going to be added to the log. It is the only way to set <a href="#" class="code"><code>meta.reasons</code></a>. This event will not be called for cross-tab actions added in a different browser tab.
-      h2.text_subtitle Subtitle
+      h2.title Subtitle
       p.text_block By default, the server state is opposite to client state. Because server-side cache could be very big, the database is the single source of truth. You can use any database with Logux.
       p.text_block Logux Server removes action after processing and always look to a database for the latest value. As a result, you can’t undo actions on the server.
       pre.code-block const action = { type: 'user/add' }
       p.text_block However, you can change this behavior and have event sourcing on the server too.
-      h2.text_subtitle <code>add()</code>
-      h3.text_subsubtitle Parameters
+      h2.title <code>add()</code>
+      h3.title Parameters
       table.table
         tr
           th Name
@@ -47,6 +47,6 @@ html( lang="en" )
           td <code class="code">options</code>
           td <code><a href="#">object</a>?</code>
           td Synchronization options.
-      h3.text_subsubtitle Returns
+      h3.title Returns
       p.text_block <code><a href="#">Promise</a>&lt;<a href="#">boolean</a>></code>
       a.button( href="#" ) Next chapter →
