--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -1,3 +1,5 @@
+include switcher/switcher.pug
+
 doctype html
 html( lang="en" )
   head
@@ -23,22 +25,45 @@ html( lang="en" )
       h1.title Logux.io UI Kit
       p.text_block Theme switcher: <a href="#">auto</a>, <a href="#dark">dark</a>, <a href="#light">light</a>.
       p.text_block Logux <strong>actions</strong> are very similar to <a href="#">Redux actions</a>. JSON objects describe what was changed in <a href="#">the application state</a>. Logux Core provides <code class="code">BaseNode</code> class, which will synchronize actions between two nodes. <code class="code">ClientNode</code> and <code class="code">ServerNode</code> classes extend this class with small behaviour changes.
-      ol.list
-        li
-          p.text_block They must have type property with a string value.
-        li
-          p.text_block You can use only string, number, boolean, null, array, and object as values.
-      ul.list
-        li
-          p.text_block The <code class="code">standard Redux</code> way to dispatch actions. Action will not be sent to the server or another browser tab. There is no way to set action’s meta in this method.
-          pre.code-block store.dispatch(action)
-        li
-          p.text_block <code class="code">preadd</code>: action is going to be added to the log. It is the only way to set <a href="#" class="code"><code>meta.reasons</code></a>. This event will not be called for cross-tab actions added in a different browser tab.
+      +switcher('Node.js', 'Ruby on Rails')
+        +switcher_section
+          ol.list
+            li
+              p.text_block They must have type property with a string value.
+            li
+              p.text_block You can use only string, number, boolean, null, array, and object as values.
+          ul.list
+            li
+              p.text_block The <code class="code">standard Redux</code> way to dispatch actions. Action will not be sent to the server or another browser tab. There is no way to set action’s meta in this method.
+              pre.code-block store.dispatch(action)
+            li
+              p.text_block <code class="code">preadd</code>: action is going to be added to the log. It is the only way to set <a href="#" class="code"><code>meta.reasons</code></a>. This event will not be called for cross-tab actions added in a different browser tab.
+        +switcher_section
+          p.text_block Clients can also create <code class="code">logux/undo</code> to revert action and ask other clients to revert it (if the developer allowed to re-send these actions on the server).
       h2.title Subtitle
       p.text_block By default, the server state is opposite to client state. Because server-side cache could be very big, the database is the single source of truth. You can use any database with Logux.
       p.text_block Logux Server removes action after processing and always look to a database for the latest value. As a result, you can’t undo actions on the server.
-      pre.code-block const action = { type: 'user/add' }
-      p.text_block However, you can change this behavior and have event sourcing on the server too.
+      +switcher('Node.js', 'Ruby on Rails', 'Any other HTTP server')
+        +switcher_section
+          p.text_block Using Logux Server
+          pre.code-block.
+            server.channel('counter', {
+              access () {
+                // Access control is mandatory. API was designed to make it harder to write dangerous code.
+                return true
+              },
+              async init (ctx) {
+                // Load initial state when client subscribing to the channel.
+                // You can use any database.
+                let value = await db.get('counter')
+                ctx.sendBack({ type: 'INC', value })
+              }
+            })
+          p.text_block However, you can change this behavior and have event sourcing on the server too.
+        +switcher_section
+          p.text_block Use Logux Rails gem
+        +switcher_section
+          p.text_block Write your own library
       h2.title <code>add()</code>
       h3.title Parameters
       table.table
