--- a/src/switcher/switcher.pug
+++ b/src/switcher/switcher.pug
@@ -21,6 +21,7 @@ mixin switcher_section
   section(
     role="tabpanel"
     aria-labelledby='sw' + switcher + 'tab' + section
+    tabindex="-1"
     hidden=section !== 1
   )
     block
