Add links to footer

--- a/src/header/header.pug
+++ b/src/header/header.pug
@@ -16,4 +16,4 @@ header.header
     +header_link('Guide',   '/guide/')
     +header_link('API',     '/api/')
     +header_link('GitHub',  'https://github.com/logux')
-    +header_link('Twitter', 'https://twiiter.com/logux_io')
+    +header_link('Twitter', 'https://twitter.com/logux_io')
