--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -97,4 +97,18 @@ html( lang="en" )
         a.title_link( href="#returns" title="Direct link to section" ) Returns
       p.text_block <code><a href="#">Promise</a>&lt;<a href="#">boolean</a>></code>
     footer.footer
-      a.footer_lurkers( href="https://evilmartians.com/" )
+      section.footer_section
+        h3.footer_title About
+        .footer_link <a href="/guide/">Guide</a>
+        .footer_link <a href="/api/">API</a>
+      section.footer_section
+        h3.footer_title Community
+        .footer_link <a href="https://github.com/logux">GitHub</a>
+        .footer_link <a href="https://twitter.com/logux_io">Twitter</a>
+        .footer_link <a href="https://gitter.im/logux/logux">Gitter</a>
+      section.footer_section
+        h3.footer_title Resources
+        .footer_link <a href="https://twitter.com/linguopunk">Linguopunk</a>
+      section.footer_section
+        | Sponsored by <a href="https://evilmartians.com/">Evil Martians</a>
+        a.footer_lurkers( href="https://evilmartians.com/" )
