--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -110,6 +110,6 @@ html( lang="en" )
         h3.footer_title Resources
         .footer_link <a href="https://twitter.com/linguopunk">Linguopunk</a>
       section.footer_section
-        .footer_text <a href="https://github.com/logux/logux.io/blob/master/LICENSE">MIT</a> and <a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC-BY-4.0</a> licenses
+        .footer_text Under the <a href="https://github.com/logux/logux.io/blob/master/LICENSE" rel="license">MIT</a> license
         .footer_text Sponsored by <a href="https://evilmartians.com/">Evil Martians</a>
         a.footer_lurkers( href="https://evilmartians.com/" )
