Add preload for chat

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -18,6 +18,7 @@ html( lang="en" )
     link( rel="stylesheet" href="/common.sss" )
     link( rel="stylesheet" href="/guide.sss" )
     meta( property="og:image" content="/base/og.png" )
+    link( rel="preload" as="script" href="https://sidecar.gitter.im/dist/sidecar.v1.js" media="(min-width:941px)" crossorigin )
   body
     - var category = 'guide'
     include header/header.pug
