--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -113,4 +113,4 @@ html( lang="en" )
       section.footer_section
         .footer_text Under the <a href="https://github.com/logux/logux.io/blob/master/LICENSE" rel="license">MIT</a> license
         .footer_text Sponsored by <a href="https://evilmartians.com/">Evil Martians</a>
-        a.footer_lurkers( href="https://evilmartians.com/" aria-label="Evil Martians logo" )
+        a.footer_lurkers( href="https://evilmartians.com/" aria-hidden="true" tabindex="-1" )
