--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -111,10 +111,8 @@ html( lang="en" )
           .footer_link <a href="https://github.com/logux">GitHub</a>
           .footer_link <a href="https://twitter.com/logux_io">Twitter</a>
           .footer_link <a href="https://gitter.im/logux/logux">Gitter</a>
-        section.footer_section
-          h3.footer_title Resources
           .footer_link <a href="https://twitter.com/linguopunk">Linguopunk</a>
-        section.footer_section
+        section.footer_section.is-author
           .footer_text Under the <a href="https://github.com/logux/logux.io/blob/master/LICENSE" rel="license">MIT</a> license
           .footer_text Sponsored by <a href="https://evilmartians.com/">Evil Martians</a>
           a.footer_lurkers( href="https://evilmartians.com/" aria-hidden="true" tabindex="-1" )
