Use link for chat button

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -23,7 +23,7 @@ html( lang="en" )
     .layout_header
       include header/header.pug
     .chat
-      button.button
+      a.button( href="https://gitter.im/logux/logux" rel="me" )
         .chat_icon
         | Join chat
     .layout_menu
