Add static methods to API

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -83,7 +83,8 @@ html( lang="en" )
             p.text_block Write your own library
         h2#add.title
           a.title_link( href="#add" title="Direct link to section" )
-            | <code>add()</code>
+            code
+              | <span class="title_prefix">Class.</span>add<span class="title_postfix">(action, meta)</span>
         h3#parameters.title
           a.title_link( href="#parameters" title="Direct link to section" ) Parameters
         table.table
