Update API links in footer

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -112,7 +112,8 @@ html( lang="en" )
         section.footer_section
           h3.footer_title About
           .footer_link <a href="/guide/">Guide</a>
-          .footer_link <a href="/api/">API</a>
+          .footer_link <a href="/node-api/">Node API</a>
+          .footer_link <a href="/web-api/">Web API</a>
         section.footer_section
           h3.footer_title Community
           .footer_link <a href="https://github.com/logux">GitHub</a>
