Add link to source code

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -82,9 +82,10 @@ html( lang="en" )
           +switcher_section
             p.text_block Write your own library
         h2#add.title
+          a.title_source( href="#" title="Source code" )
           a.title_link( href="#add" title="Direct link to section" )
             code
-              | <span class="title_prefix">Class.</span>add<span class="title_postfix">(action, meta)</span>
+              | <span class="title_extra">Class.</span>add<span class="title_extra">(action, meta)</span>
         h3#parameters.title
           a.title_link( href="#parameters" title="Direct link to section" ) Parameters
         table.table
