--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -109,6 +109,7 @@ html( lang="en" )
         h3#returns.title
           a.title_link( href="#returns" title="Direct link to section" ) Returns
         p.text_block <code><a href="#">Promise</a>&lt;<a href="#">boolean</a></code>
+        hr.line
 
       article.text
         h1#h1.title
@@ -123,6 +124,7 @@ html( lang="en" )
           a.title_link( href="#h3" title="Direct link to section" )
             | Title 3
         p.text_block Logux architecture was designed to be peer-to-peer and flexible. You can build different architecture on top of core concepts depends on your needs.
+        hr.line
 
       footer.footer
         section.footer_section
