Add SVG favicon

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -6,6 +6,7 @@ html( lang="en" )
     meta( charset="utf-8" )
     title Logux.io UI Kit
     meta( name="viewport" content="width=device-width" )
+    link( rel="shortcut icon" href="/base/favicon.svg" type="image/svg+xml" )
     link( rel="shortcut icon" href="/base/32.png" sizes="32x32" )
     link( rel="icon" href="/base/196.png" sizes="196x196" )
     link( rel="icon" href="/base/512.png" sizes="512x512" )
