--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -12,7 +12,7 @@ html( lang="en" )
     link( rel="icon" href="/base/512.png" sizes="512x512" )
     link( rel="mask-icon" href="/base/pinned.svg" color="#ffc40d" )
     link( rel="apple-touch-icon" href="/base/apple.png" )
-    meta( name="apple-mobile-web-app-title" content="Logux" )
+    meta( name="app#le-mobile-web-app-title" content="Logux" )
     script( defer src="/common.js" )
     script( defer src="/guide.js" )
     link( rel="stylesheet" href="/common.sss" )
@@ -20,17 +20,87 @@ html( lang="en" )
     meta( property="og:image" content="/base/og.png" )
     link( rel="preconnect" href="https://sidecar.gitter.im/" media="(min-width:941px)" )
   body.layout
-    - var category = 'guide'
-    .layout_header
-      include header/header.pug
-    .chat
-      a.button( href="https://gitter.im/logux/logux" rel="me" )
-        .chat_icon
-        | Join chat
-    .layout_menu
-      aside.menu
+    nav.layout_aside
+      .layout_menu
+        ul.menu
+          li.menu_hidden
+            a.menu_skip( href="#main" ) Skip navigation
+          li
+            a.menu_home( rel="home" href="/" ) Logux
+            .menu_separator
+          li
+            a.menu_link.is-open Guide
+          li
+            a.menu_link( href="/recipes/" ) Recipes
+          li
+            a.menu_link( href="/web-api/" ) Web API
+          li
+            a.menu_link( href="/node-api/" ) Node API
+          li.menu_bottom
+            .menu_separator
+            a.menu_link( href="https://twitter.com/logux_io" rel="me" ) Twitter
+          li
+            a.menu_link( href="https://github.com/logux" rel="me" ) GitHub
+          li
+            a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
+      .layout_submenu
+        ul.submenu
+          li
+            ul
+              li
+                a.submenu_link( href="#" ) Authentication
+              li
+                a.submenu_link( href="#" ) Scaling
 
-    .layout_body
+          li
+            .submenu_title
+              .submenu_text Logux architecture
+            ol
+              li
+                a.submenu_link( href="#" ) Core Concepts
+              li
+                a.submenu_link.is-open Using Concepts in Practice
+              li
+                a.submenu_link( href="#" ) Comparing Logux with AJAX and GraphQL
+              li
+                a.submenu_link( href="#" ) Parts
+              li
+                a.submenu_link( href="#" ) Choosing Right Architecture
+          li
+            .submenu_title
+              a.submenu_link( href="#" ) TestTime
+            ul
+              li
+                a.submenu_link( href="#" ) .getLog()
+              li
+                a.submenu_link( href="#" ) #lastId
+              li
+                a.submenu_link( href="#" ) #nextLog()
+          li
+            .submenu_title
+              .submenu_text Core Concepts and Small Secrets
+            ol
+              li
+                a.submenu_link( href="#" ) Nodes
+              li
+                a.submenu_link( href="#" ) Actions
+              li
+                a.submenu_link( href="#" ) Meta
+              li
+                a.submenu_link( href="#" ) Application State
+              li
+                a.submenu_link( href="#" ) Channels and Subscriptions
+              li
+                a.submenu_link( href="#" ) Cleaning Log and Action Reasons
+              li
+                a.submenu_link( href="#" ) Subprotocols
+
+    .layout_float
+      button.layout_open( title="Open menu" )
+      button.layout_close( title="Close menu" hidden )
+      a.layout_chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
+
+    main.layout_main#main
       article.text
         .edit
           h1#home.title
