Fix current page class in menu

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -29,7 +29,7 @@ html( lang="en" )
             a.menu_home( rel="home" href="/" ) Logux
             .menu_separator
           li
-            a.menu_link.is-open Guide
+            a.menu_link.is-current Guide
           li
             a.menu_link( href="/recipes/" ) Recipes
           li
@@ -59,7 +59,7 @@ html( lang="en" )
               li
                 a.submenu_link( href="#" ) Core Concepts
               li
-                a.submenu_link.is-open Using Concepts in Practice
+                a.submenu_link.is-current Using Concepts in Practice
               li
                 a.submenu_link( href="#" ) Comparing Logux with AJAX and GraphQL
               li
