Add submenu to guide

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -47,12 +47,10 @@ html( lang="en" )
             a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
       .layout_submenu
         ul.submenu
-          li
-            ul
-              li
-                a.submenu_link( href="#" ) Authentication
-              li
-                a.submenu_link( href="#" ) Scaling
+          li.is-flat
+            a.submenu_link( href="#" ) Authentication
+          li.is-flat
+            a.submenu_link( href="#" ) Scaling
 
           li
             .submenu_text Logux architecture
