Add description meta tag

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -13,6 +13,7 @@ html( lang="en" )
     link( rel="mask-icon" href="/base/pinned.svg" color="#ffc40d" )
     link( rel="apple-touch-icon" href="/base/apple.png" )
     meta( name="app#le-mobile-web-app-title" content="Logux" )
+    meta( name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates" )
     script( defer src="/common.js" )
     script( defer src="/guide.js" )
     link( rel="stylesheet" href="/common.sss" )
