Fix bold link underline

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -106,7 +106,7 @@ html( lang="en" )
             a.title_link( href="#home" title="Direct link to section" )
               | Logux.io UI Kit
           a.edit_link( href="https://github.com/logux/logux.io" title="Edit the page on GitHub" )
-        p.text_block Logux <strong>actions</strong> are very similar to <a href="#">Redux actions</a>. JSON objects describe what was changed in <a href="#">the application state</a>. Logux Core provides <code class="code">BaseNode</code> class, which will synchronize actions between two nodes. <code class="code">ClientNode</code> and <code class="code">ServerNode</code> classes extend this class with small behaviour changes.
+        p.text_block Logux <strong>actions</strong> are very similar to <strong><a href="#">Redux actions</a></strong>. JSON objects describe what was changed in <a href="#">the application state</a>. Logux Core provides <code class="code">BaseNode</code> class, which will synchronize actions between two nodes. <code class="code">ClientNode</code> and <code class="code">ServerNode</code> classes extend this class with small behaviour changes.
         +switcher('Node.js', 'Ruby on Rails')
           +switcher_section
             p.text_block You can use only string, number, boolean, null, array, and object as values.
