Use real chat user number

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -40,13 +40,15 @@ html( lang="en" )
             a.menu_link( href="/web-api/" ) Web API
           li
             a.menu_link( href="/node-api/" ) Node API
-          li.menu_bottom
+          li.is-bottom.is-separated
             .menu_separator
             a.menu_link( href="https://twitter.com/logux_io" rel="me" ) Twitter
-          li
+          li.is-bottom
             a.menu_link( href="https://github.com/logux" rel="me" ) GitHub
-          li
-            a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
+          li.is-bottom
+            a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" )
+              | Join chat
+              .menu_extra (10 people)
       .layout_submenu
         ul.submenu
           li.is-flat
