Enable quick chat in mobile

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -99,7 +99,7 @@ html( lang="en" )
     .layout_float
       button.layout_open( title="Open menu" )
       button.layout_close( title="Close menu" hidden )
-      a.layout_chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
+      a.layout_chat.chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
 
     main.layout_main#main
       article.text
