Revert mobile chat and smaller social links

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -40,12 +40,12 @@ html( lang="en" )
             a.menu_link( href="/web-api/" ) Web API
           li
             a.menu_link( href="/node-api/" ) Node API
-          li.is-bottom.is-separated
+          li.is-separated
             .menu_separator
             a.menu_link( href="https://twitter.com/logux_io" rel="me" ) Twitter
-          li.is-bottom
+          li
             a.menu_link( href="https://github.com/logux" rel="me" ) GitHub
-          li.is-bottom
+          li
             a.menu_link.chat( href="https://gitter.im/logux/logux" rel="me" )
               | Join chat
               .menu_extra (10 people)
@@ -99,7 +99,7 @@ html( lang="en" )
     .layout_float
       button.layout_open( title="Open menu" )
       button.layout_close( title="Close menu" hidden )
-      a.layout_chat.chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
+      a.layout_chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
 
     main.layout_main#main
       article.text
