Add more link to footer

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -38,11 +38,11 @@ html( lang="en" )
           li
             a.menu_link( href="/recipes/authentication/" ) Recipes
           li
-            a.menu_link( href="/protocols/ws/spec/" ) Protocols
-          li
             a.menu_link( href="/web-api/" ) Web API
           li
             a.menu_link( href="/node-api/" ) Node API
+          li
+            a.menu_link( href="/protocols/ws/spec/" ) Protocols
           li.is-separated
             .menu_separator
             a.menu_link( href="https://twitter.com/logux_io" rel="me" ) Twitter
@@ -205,8 +205,10 @@ html( lang="en" )
         section.footer_section
           h3.footer_title About
           .footer_link <a href="/guide/">Guide</a>
+          .footer_link <a href="/recipes/">Recipes</a>
           .footer_link <a href="/node-api/">Node API</a>
           .footer_link <a href="/web-api/">Web API</a>
+          .footer_link <a href="/protocols/">Protocols</a>
         section.footer_section
           h3.footer_title Community
           .footer_link <a href="https://github.com/logux">GitHub</a>
