Show scroll only on hover in menu

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -98,6 +98,23 @@ html( lang="en" )
                 a.submenu_link( href="#" ) Cleaning Log and Action Reasons
               li
                 a.submenu_link( href="#" ) Subprotocols
+          li
+            .submenu_text Core Concepts and Small Secrets
+            ol
+              li
+                a.submenu_link( href="#" ) Nodes
+              li
+                a.submenu_link( href="#" ) Actions
+              li
+                a.submenu_link( href="#" ) Meta
+              li
+                a.submenu_link( href="#" ) Application State
+              li
+                a.submenu_link( href="#" ) Channels and Subscriptions
+              li
+                a.submenu_link( href="#" ) Cleaning Log and Action Reasons
+              li
+                a.submenu_link( href="#" ) Subprotocols
 
     .layout_float
       button.layout_open( title="Open menu" )
