Make button bigger

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -146,6 +146,9 @@ html( lang="en" )
             p.text_block To stop the server press <kbd class="code">Command</kbd>+<kbd class="code">.</kbd> on Mac OS X and <kbd class="code">Ctrl</kbd>+<kbd class="code">C</kbd> on Linux and Windows.
           +switcher_section
             p.text_block Clients can also create <code class="code">logux/undo</code> to revert action and ask other clients to revert it (if the developer allowed to re-send these actions on the server).
+          p.text_block
+            a.button( href="#" )
+              | Next chapter →
         h2#subtitle.title
           a.title_link( href="#subtitle" title="Direct link to section" )
             | Subtitle
