Reuse button in float navigation

--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -117,9 +117,11 @@ html( lang="en" )
                 a.submenu_link( href="#" ) Subprotocols
 
     .layout_float
-      button.layout_open( title="Open menu" )
-      button.layout_close( title="Close menu" hidden )
-      a.layout_chat( href="https://gitter.im/logux/logux" rel="me" ) Join chat
+      button.layout_open.button.is-square( title="Open menu" )
+      button.layout_close.button.is-square( title="Close menu" hidden )
+      a.button( href="https://gitter.im/logux/logux" rel="me" )
+        .layout_chat
+        | Join chat
 
     main.layout_main#main
       article.text
